--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,4 @@
 .footer {
-	margin-top: 2rem;
 	background-color: $aleph-grey;
 	padding: 2rem 0;
 	font-size: $font-size-h3;
